# grad-project

./: .gitignore  main.py  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
deployment/: docker-compose.yml
src/: ollama.py
utils/: extractor.py  logger.py  milvus.py
